fixed a color and some alignment issues

--- a/home.css
+++ b/home.css
@@ -49,23 +49,29 @@ The content `<div>` is where all your content goes.
 }
 
 .header {
-   margin: 0;
-   color: #333;
-   text-align: center;
-   padding: 2.5em 2em 0;
-   border-bottom: 1px solid #eee;
+  margin: 0;
+  color: #333;
+  text-align: center;
+  padding: 2.5em 2em 0;
+  border-bottom: 1px solid #eee;
 }
   .header h1 {
-      margin: 0.2em 0;
-      font-size: 3em;
-      font-weight: 300;
+    margin: 0.2em 0;
+    font-size: 3em;
+    font-weight: 300;
   }
-   .header .pure-menu-horizontal {
-      font-weight: 300;
-      font-size: x-large;
-      color: #ccc;
-      padding: 5px;
-      margin-top: 0;
+  .header h2 {
+    font-weight: 300;
+    color: #333;
+    padding: 0;
+    margin-top: 0;
+  }
+  .header .pure-menu-horizontal {
+    font-weight: 300;
+    font-size: x-large;
+    color: #ccc;
+    padding: 5px;
+    margin-top: 0;
   }
 
 .footer {
